--- a/My-Trello-Clone/src/app/todo/todo.component.html
+++ b/My-Trello-Clone/src/app/todo/todo.component.html
@@ -2,5 +2,6 @@
     <p>{{title}}</p>
     <p>{{cDate}}</p>
     <p>{{dDate}}</p>
+    <app-delete-modal [todo] = todo></app-delete-modal>
 </div>
     
