--- a/My-Trello-Clone/src/app/app.component.css
+++ b/My-Trello-Clone/src/app/app.component.css
@@ -6,3 +6,14 @@ app-table{
     padding-right: 10px;
     margin-top: auto;
 }
+div{
+    display: block;
+    width: 900px;
+    margin-left: auto;
+    
+}
+input{
+    margin-left: 15px;
+    margin-bottom: 20px;
+    margin-top: 10px;
+}
